text-align-fix

--- a/scss/info.scss
+++ b/scss/info.scss
@@ -69,5 +69,10 @@ height: 169px;
     }
   }
 }
-
+#text-align-center{
+  text-align: center;
+}
+}
+#text-align-center{
+  text-align: left;
 }
